<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            />
        <item android:id="@+id/contact"
            android:icon="@drawable/ic_baseline_whatshot_24"
            android:title="@string/contact"
            />
        <item android:id="@+id/maps"
            android:icon="@drawable/google"
            android:title="@string/maps"
            />
        <item android:id="@+id/CountryByIp"
            android:icon="@drawable/find"
            android:title="@string/find_country_by_ip"
            />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/about"
                    android:icon="@drawable/ic_baseline_account_circle_24"
                    android:title="@string/about"
                    />
                <item android:id="@+id/register"
                    android:icon="@drawable/ic_baseline_login_24"
                    android:title="@string/register"
                    />
            </group>
        </menu>
    </item>

    <item android:title="@string/comunication">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/shareBT"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/share"
                    />
                <item android:id="@+id/rate_me"
                    android:icon="@drawable/ic_baseline_sentiment_satisfied_alt_24"
                    android:title="@string/rate_me"
                    />
            </group>
        </menu>
    </item>
</menu>